examples/test/testpolicy5698.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5698
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key3: value9
      key45: value37
      key19: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value46
          key44: value38
      podSelector:
        matchLabels:
          key49: value19
          key31: value11
